# autonomics

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/phloem-server/: Cargo.toml
apps/phloem-server/src/: config.rs  main.rs  routes.rs  services.rs  sse.rs  state.rs
apps/phloem-tui/: Cargo.toml
apps/phloem-tui/examples/: chat_render.rs
apps/phloem-tui/src/: agent_runtime.rs  app.rs  app_event.rs  lib.rs  main.rs  state.rs
apps/tui/: Cargo.toml
apps/tui/examples/: chat_render.rs
apps/tui/src/: app.rs  app_event.rs  app_event_sender.rs  config_db.rs  lib.rs  main.rs  state.rs  widgets.rs
bio_crates/ldsc/: Cargo.toml  README.md
bio_crates/ldsc/src/: alleles.rs  bed.rs  bedio.rs  hsq.rs  ingest.rs  io.rs  irwls.rs  jackknife.rs  ldscore.rs  lib.rs  linalg.rs  make_annot.rs  munge.rs  regress.rs  stats.rs  sumstats.rs
bio_crates/ldsc/tests/: generate_fixtures.sh  integration.rs
bio_crates/mr/: Cargo.toml
bio_crates/mr/src/: dispatch.rs  dist.rs  harmonise.rs  heterogeneity.rs  kde.rs  lib.rs  linalg.rs  na.rs  result.rs  steiger.rs  utils.rs
bio_crates/mr/tests/: dispatch_golden.rs  harmonise_golden.rs  kde_weighted_compare.rs  methods_golden.rs  steiger_golden.rs
crates/aether-tools/: Cargo.toml
crates/aether-tools/src/: describe_table.rs  lib.rs  list_tables.rs  namespace.rs  query.rs  table.rs
crates/agentik/: Cargo.toml
crates/agentik-api/: Cargo.toml
crates/agentik-api/src/: lib.rs
crates/agentik-app/: Cargo.toml
crates/agentik-app/src/: kinds.rs  main.rs  settings_io.rs
crates/agentik-control-client/: Cargo.toml
crates/agentik-control-client/src/: client.rs
crates/agentik-core/: .gitignore  Cargo.toml  README.md
crates/agentik-core/src/: agent.rs  agent_builder.rs  context.rs  error.rs  lib.rs  lifecycle.rs  memory.rs  message_ext.rs  process.rs  prompt.rs  storage.rs  testing.rs  tools.rs  toolset.rs  types.rs
crates/agentik-core/tests/: integration_agent.rs  integration_agent_mimo.rs
crates/agentik-runtime/: Cargo.toml
crates/agentik-runtime/src/: http.rs  lib.rs  main.rs  model_config.rs  pool.rs  process.rs  provider_factory.rs  registry.rs  runtime.rs  tools.rs
crates/agentik-runtime/tests/: integration_registry.rs  integration_runtime.rs
crates/agentik-sdk/: .env.example  Cargo.toml  README.md
crates/agentik-sdk/src/: client.rs  config.rs  files.rs  http.rs  lib.rs  model.rs  provider.rs  resources.rs  streaming.rs  tokens.rs  utils.rs
crates/agentik-sdk/tests/: custom_gateway_integration.rs  integration_tests.rs
crates/agentik-skill-client/: Cargo.toml
crates/agentik-skill-client/src/: client.rs  lib.rs
crates/agentik-skill-server/: Cargo.toml
crates/agentik-skill-server/src/: fs_store.rs  grpc_service.rs  lib.rs  main.rs  registry.rs  sqlite_store.rs  store.rs
crates/agentik-skill-server/tests/: skill_test.http
crates/agentik-tools/: Cargo.toml
crates/agentik-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  webfetch.rs  write.rs
crates/agentik-tui/: Cargo.toml
crates/agentik-tui/src/: events.rs  lib.rs  renderer.rs  state.rs  tests.rs  theme.rs  tools.rs
crates/agentik-types/: Cargo.toml
crates/agentik-types/src/: agent_events.rs  batches.rs  errors.rs  files_api.rs  lib.rs  lifecycle.rs  messages.rs  models.rs  models_api.rs  shared.rs  streaming.rs  tools.rs
crates/agentik/src/: lib.rs
crates/bibliography-tools/: Cargo.toml
crates/bibliography-tools/scripts/: pubmed-bridge.mjs
crates/bibliography-tools/src/: common.rs  detail.rs  lib.rs  search.rs
crates/biofusion/: Cargo.toml  README.md
crates/biofusion-cache/: Cargo.toml
crates/biofusion-cache/src/: lib.rs
crates/biofusion/src/: datasource_bcf.rs  datasource_vcf.rs  ext.rs  lib.rs
crates/biofusion/test_datasets/: sample.vcf
crates/biofusion/tests/: integration.rs  vcf_struct_query.rs
crates/data-engine/: Cargo.toml  README.md
crates/data-engine-tools/: Cargo.toml
crates/data-engine-tools/src/: add_datalake_sink_tool.rs  add_edge_tool.rs  add_file_sink_tool.rs  add_ldsc_tool.rs  add_linear_regression_tool.rs  add_node_tool.rs  add_sink_tool.rs  add_source_tool.rs  add_sql_tool.rs  clear_dag_tool.rs  get_node_doc_tool.rs  get_node_ports_tool.rs  get_node_spec_tool.rs  get_output_tool.rs  lib.rs  list_node_factories_tool.rs  remove_node_tool.rs  run_dag_tool.rs  update_node_tool.rs  view_dag_tool.rs  viz_tool.rs
crates/data-engine-tools/tests/: e2e_dag_tools.rs
crates/data-engine/docs/: dataset.md
crates/data-engine/src/: data_engine.rs  data_session.rs  dataset.rs  dataset_store.rs  error.rs  lib.rs  node_registry.rs  runtime.rs
crates/data-engine/test_datasets/: test.vcf
crates/data-engine/tests/: dag_pipeline.rs  datalake_integrated.rs  replicate_pos_field_not_found.rs  table_creation.rs
crates/data-ingest/: Cargo.toml
crates/data-ingest/src/: error.rs  lib.rs  registry.rs  trait_def.rs
crates/datalake/: Cargo.toml  README.md
crates/datalake-tools/: Cargo.toml
crates/datalake-tools/src/: describe_table_tool.rs  lib.rs  query_iceberg_tool.rs
crates/datalake/docs/: dataset.md
crates/datalake/src/: aether.rs  config.rs  datalake.rs  lib.rs
crates/datalake/tests/: datalake_integrated.rs  table_creation.rs
crates/eutils-rs/: Cargo.toml
crates/eutils-rs/src/: client.rs  error.rs  format.rs  lib.rs  tools.rs  types.rs
crates/eutils-rs/tests/: ecitmatch.rs  efetch.rs  egquery.rs  einfo.rs  elink.rs  epost.rs  esearch.rs  espell.rs  esummary.rs  tools.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs  storage.rs  tools.rs
infra/: README.md  pyproject.toml
infra/1000genome/: pyproject.toml
infra/datalake/: pyproject.toml
infra/ld_score/: __init__.py  config.py  datalake.py  main.py  preview.py  schema.py  sink_parquet.py
infra/sink_af/: Cargo.toml
infra/sink_af/src/: main.rs
infra/sink_ld_matrix/: Cargo.toml  README.md
infra/sink_ld_matrix/examples/: check_tables.rs  verify_all.rs
infra/sink_ld_matrix/src/: main.rs
infra/thousand_genomes/: calculate_maf.sh  ld_matrix.sh  pyproject.toml
(+756 files in other folders)
