[workspace]
resolver = "3"
members = [
  "crates/agentik-sdk",
  "crates/agentik-types",
  "crates/agentik-core",
  "crates/agentik-proc",
  "crates/agentik-tools",
  "crates/stat-primitives",
  "crates/gwascatalog-sdk",
  "crates/data-engine",
  "apps/phloem-tui",
  "crates/opengwas-rs",
  "crates/eutils-rs",
  "crates/agentik-runtime",
  "crates/fs",
  "crates/datalake",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
derive_more = { version = "2.1.1", features = ["from"] }
rayon = "1.12.0"
futures = "0.3"

iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
iceberg-storage-opendal = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
iceberg-datafusion = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
arrow = "58.3.0"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
arrow-csv = "58.3.0"
arrow-select = "58.3.0"
arrow-ord = "58.3.0"
parquet = "58.3.0"
datafusion = "53"
noodles = { version = "0.107.0", features = ["vcf"] }
oxbow = "0.8.0"

# Suppress unused-warnings for the public-API workspace.dependencies that
# the umbrella doesn't directly import. Keep this list as a hint for
# future members; do not delete entries just because a single member
# doesn't use them.
[workspace.lints.rust]
unused_imports = "allow"
