[workspace]
resolver = "3"
members = [
  "crates/agentik-sdk",
  "crates/agentik-types",
  "crates/agentik-core",
  "crates/agentik-proc",
  "crates/agentik-tools",
  "crates/stat-primitives",
  "crates/gwascatalog-sdk",
  "crates/data-engine",
  "apps/tui",
  "crates/opengwas",
  "crates/eutils",
  "crates/runtime",
  "crates/fs",
  "crates/datalake",
  "crates/datalake-tools",
  "crates/biofusion",
  "crates/data-engine-tools",

  "crates/biofusion-cache",
  "bio_crates/ldsc",
  "bio_crates/mr",
  "infra/sink_ld_matrix",
  "crates/visualization",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
derive_more = { version = "2.1.1", features = ["from"] }
rayon = "1.12.0"
futures = "0.3"
schemars = "1.2.1"

unicode-width = "0.2"

iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
iceberg-storage-opendal = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
iceberg-datafusion = { git = "https://github.com/apache/iceberg-rust.git", rev = "713e2016" }
arrow = { version = "58.3.0", features = ["prettyprint"] }
arrow-array = "58.3.0"
arrow-buffer = "58.3.0"
arrow-schema = "58.3.0"
arrow-csv = "58.3.0"
arrow-select = "58.3.0"
arrow-ord = "58.3.0"
parquet = "58.3.0"
datafusion = { version = "53" }
noodles = { version = "0.107.0", features = ["vcf"] }
oxbow = { git = "https://github.com/wjixiang/oxbow.git" }

faer = "0.24.4"

extendr-api = "0.9.0"
extendr-engine = "0.9.0"

# Suppress unused-warnings for the public-API workspace.dependencies that
# the umbrella doesn't directly import. Keep this list as a hint for
# future members; do not delete entries just because a single member
# doesn't use them.
[workspace.lints.rust]
unused_imports = "allow"

[profile.dev.package.faer]
opt-level = 3
