[project]
name = "autonomics-infra"
version = "0.1.0"
description = "Data infrastructure scripts for the autonomics project"
requires-python = ">=3.13"
dependencies = ["pyiceberg>=0.11.1", "pyarrow>=18.0.0", "boto3>=1.43.52"]

[tool.uv.workspace]
members = ["1000genome"]

[tool.uv.sources]
boto3 = { workspace = true }
