[package]
name = "phloem-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentik-core = { path = "../../crates/agentik-core" }
agentik-sdk = { path = "../../crates/agentik-sdk" }
agentik-types = { path = "../../crates/agentik-types", features = ["schema"] }
datalake-tools = { path = "../../crates/datalake-tools" }
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = "8"
chrono = { workspace = true }
