[package]
name = "phloem-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-comfy-tabs = "0.5"
ratatui-textarea = "0.9"
agentik-core = { path = "../../crates/agentik-core" }
agentik-sdk = { path = "../../crates/agentik-sdk" }
agentik-runtime = { path = "../../crates/agentik-runtime" }
rusqlite = "0.40.1"
anyhow.workspace = true
pulldown-cmark = "0.13"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros"] }
uuid = "1.23.3"
tokio.workspace = true
unicode-width = "0.2"
mermaid-text = { path = "../../crates/mermaid-text" }
unicode-segmentation = "1.12"

[lints]
workspace = true
