[package]
name = "tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
ratatui-comfy-tabs = "0.5"
ratatui-core = "0.1"
tui-scrollbar = "0.2"
textwrap = "0.16"
agentik-core = { path = "../../crates/agentik-core" }
agentik-sdk = { path = "../../crates/agentik-sdk" }
runtime = { path = "../../crates/runtime" }
opengwas = { path = "../../crates/opengwas" }
rusqlite = "0.40.1"
pulldown-cmark = "0.13"
syntect = { version = "5.3.0", default-features = false, features = [
  "default-fancy",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros"] }
uuid = "1.23.3"
tokio.workspace = true
unicode-width = "0.2"
unicode-segmentation = "1.12"
serde_json.workspace = true
clap = { version = "4.6.1", features = ["derive"] }

[lints]
workspace = true

[features]
# Enables tracing debug logs in the xai_textarea module.
debug-logs = []

[dev-dependencies]
rand = "0.9"
pretty_assertions = "1"
chrono = "0.4"
arboard = "3.6"
itertools = "0.14"
fuzzy-matcher = "0.3"
ignore = "0.4"
