[package]
name = "ldsc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
faer.workspace = true
datafusion.workspace = true
thiserror.workspace = true

[dev-dependencies]
arrow-csv.workspace = true
tokio.workspace = true

[lints]
workspace = true
