[package]
name = "ldsc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
faer.workspace = true
datafusion.workspace = true
thiserror.workspace = true
# Compression for LDSC file formats (.gz read+write, .bz2 read-only).
# flate2 defaults to the pure-Rust miniz_oxide backend (no system zlib);
# bzip2-rs is pure Rust (libbz2-free), decompression only — LDSC outputs
# are always gzip, so no bz2 write path is needed.
flate2 = "1.1"
bzip2-rs = "0.1.2"

[dev-dependencies]
arrow-csv.workspace = true
tokio.workspace = true

[lints]
workspace = true
