[package]
name = "mr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mr"
path = "src/lib.rs"

[dependencies]
faer.workspace = true
thiserror.workspace = true
# Distribution functions (Normal / Student-t / Chi^2 / F) and normal sampling,
# used to reproduce R's pnorm / pt / pchisq / pf and rnorm to ~1e-9.
statrs = "0.18"
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"

[dev-dependencies]

[lints]
workspace = true
