[package]
name = "aether-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent tools for the Aether workspace: Iceberg namespace/table CRUD via the REST catalog, plus DataFusion-level table discovery, schema inspection, and SQL preview."

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
datalake = { path = "../datalake" }
iceberg = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
datafusion = { workspace = true }
anyhow.workspace = true
stat-primitives = { path = "../stat-primitives" }
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
