[package]
name = "agentik-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Host binary wiring agentik-runtime + agentik-tui."

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-sdk = { path = "../agentik-sdk" }
agentik-skill = { path = "../agentik-skill" }
agentik-tools = { path = "../agentik-tools" }
agentik-runtime = { path = "../agentik-runtime" }
agentik-tui = { path = "../agentik-tui" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { workspace = true }
uuid = "1"

[lints]
workspace = true
