[package]
name = "agentik-control-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP/SSE client for the agentik control plane."

[dependencies]
agentik-api = { path = "../agentik-api" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
uuid = { version = "1.12", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
