[package]
name = "agentik-core"
version = "0.1.0"
edition = "2024"
description = "Domain-agnostic agent runtime. Plug in any AgentContext to specialize."
license = "MIT"

[dependencies]
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
uuid = { version = "1.12", features = ["v4"] }
agentik-sdk = { path = "../agentik-sdk" }
agentik-types = { path = "../agentik-types" }

async-trait = "0.1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
