[package]
name = "agentik-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Multi-agent process runtime for agentik."

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-types = { path = "../agentik-types" }
agentik-api = { path = "../agentik-api", features = ["schema"] }
agentik-control-client = { path = "../agentik-control-client" }
agentik-skill = { path = "../agentik-skill" }
agentik-skill-client = { path = "../agentik-skill-client" }
agentik-skill-server = { path = "../agentik-skill-server" }
agentik-tools = { path = "../agentik-tools" }
agentik-sdk = { path = "../agentik-sdk" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.12", features = ["v4"] }
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6.1", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
