[package]
name = "agentik-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sync-to-async bridge for running an agentik agent from a sync context"

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-sdk = { path = "../agentik-sdk" }
opengwas-rs = { path = "../opengwas-rs" }
eutils-rs = { path = "../eutils-rs" }
fs = { path = "../fs" }
tokio = { workspace = true }
tokio-util = "0.7"
anyhow = { workspace = true }

[lints]
workspace = true
