[package]
name = "agentik-sdk"
version = "0.3.0"
edition = { workspace = true }
authors = ["Wjixiang", "Sonnet 4.0 + Cursor"]
description = "Comprehensive, type-safe Rust SDK for the Anthropic API with streaming, tools, vision, files, and batch processing support."
documentation = "https://docs.rs/agentik-sdk"
license = "MIT"
keywords = ["anthropic", "claude", "ai", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]
readme = "README.md"
exclude = ["target/", ".git/", ".github/", "*.sh", ".DS_Store"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
agentik-types = { path = "../agentik-types" }
reqwest = { version = "0.13", features = [
  "json",
  "query",
  "stream",
  "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
futures = { version = "0.3", features = ["alloc"] }
thiserror.workspace = true
tracing = "0.1"
dotenvy = "0.15"
url = "2.5"
bytes = "1.5"
mime = "0.3.17"
tokio-stream = { version = "0.1", features = ["sync"] }
eventsource-stream = "0.2"
pin-project = "1.0"
async-trait = "0.1"
tempfile = "3.0"
sha2 = "0.11"
base64 = "0.22"
backoff = "0.4"
tower = "0.5"
once_cell = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
mockall = "0.14"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
