[package]
name = "agentik-skill-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentik-skill = { path = "../agentik-skill" }
agentik-skill-proto = { path = "../agentik-skill-proto" }
tonic = "0.13"
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
