[package]
name = "agentik-skill-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentik-skill = { path = "../agentik-skill" }
agentik-skill-proto = { path = "../agentik-skill-proto" }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = "0.13"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3"
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = { workspace = true }
serde_yaml = "0.9"

[lints]
workspace = true
