[package]
name = "agentik-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Built-in primitive tools for agentik-core: bash, read, write, edit, glob, grep, webfetch."
license.workspace = true

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-sdk = { path = "../agentik-sdk" }
agentik-proc = { path = "../agentik-proc" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "fs"] }
glob = "0.3"
regex = "1"
ignore = "0.4"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli"] }
html2text = "0.14"

[dev-dependencies]
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
