[package]
name = "agentik-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reusable TUI panels for visualizing sub-agents and streaming chat conversations."

[lib]
path = "src/lib.rs"

[dependencies]
agentik-runtime = { path = "../agentik-runtime" }

# Pure rendering deps.
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.12", features = ["v4"] }

[lints]
workspace = true
