[package]
name = "agentik-types"
version = "0.1.0"
edition = "2024"
authors = ["Wjixiang"]
description = "Shared type definitions for the Anthropic API (agentik ecosystem)."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = [
  "json",
  "query",
  "stream",
  "multipart",
], optional = true }
# Optional: derive `utoipa::ToSchema` for wire types that surface in the
# control-plane OpenAPI doc. Off by default so this crate stays lightweight.
utoipa = { version = "5", optional = true }

[features]
default = ["http"]
http = ["dep:reqwest"]
schema = ["dep:utoipa"]

[dev-dependencies]
serde_json = "1.0"
