[package]
name = "agentik"
version = "0.1.0"
description = "Umbrella crate for the agentik ecosystem — re-exports agentik-core, agentik-sdk, and agentik-types under a single dependency."
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# agentik-core = { workspace = true }
# agentik-sdk = { workspace = true }
# agentik-types = { workspace = true }

# Sub-crate features are surfaced as umbrella features so that downstream
# users can opt in/out in one place. Mirror the names actually defined in
# each sub-crate; `default` is intentionally empty so the umbrella does not
# silently pull in features users did not ask for.
[features]
default = []
# http = ["agentik-types/http"]
