[package]
name = "bibliography-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PubMed literature search tools for agentik-core: search articles and fetch article details via a Node.js subprocess bridge."

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }

[lints]
workspace = true
