[package]
name = "biofusion-cache"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
biofusion = { path = "../biofusion" }
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
derive_more.workspace = true

[lints]
workspace = true
