[package]
name = "biofusion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
datafusion-datasource = "53"
datafusion-common-runtime = "53"
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
oxbow = { workspace = true }
noodles = { workspace = true, features = ["vcf", "bgzf", "bcf"] }
derive_more = { workspace = true }
futures.workspace = true
tokio.workspace = true
bytes = "1"

[lints]
workspace = true
