[package]
name = "biofusion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
datafusion-datasource = "53"
datafusion-common-runtime = "53"
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
oxbow = { workspace = true }
noodles = { workspace = true, features = [
    "vcf",
    "bgzf",
    "bcf",
    "fasta",
    "fastq",
    "bed",
    "gtf",
    "gff",
    "sam",
    "bam",
    "cram",
] }
bigtools = { version = "0.5", default-features = false, features = ["read"] }
flate2 = "1.1"
derive_more = { workspace = true }
futures.workspace = true
tokio.workspace = true
bytes = "1"
blake3 = "1.8.5"

[lints]
workspace = true
