[package]
name = "data-engine-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
data-engine = { path = "../data-engine" }
serde = { workspace = true }

[lints]
workspace = true
