[package]
name = "data-engine-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
schemars.workspace = true
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
arrow.workspace = true
arrow-array.workspace = true
data-engine = { path = "../data-engine" }
datalake = { path = "../datalake" }
visualization = { path = "../visualization" }
datafusion.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }

[dev-dependencies]
fs = { path = "../fs" }

[lints]
workspace = true
