[package]
name = "data-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
datalake = { path = "../datalake" }
fs = { path = "../fs" }
serde = { workspace = true, features = ["derive"] }
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
datafusion.workspace = true
tokio = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
arrow-array = "57.3.0"
arrow-csv = "57.3.0"
arrow-schema = "57.3.0"
arrow-select = "57.3.0"
arrow-ord = "57.3.0"
serde_json = { workspace = true }
nanoid = "0.5.0"
async-trait.workspace = true

[dev-dependencies]
datalake = { path = "../datalake" }
iceberg.workspace = true