[package]
name = "data-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
datalake = { path = "../datalake" }
fs = { path = "../fs" }
serde = { workspace = true, features = ["derive"] }
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
datafusion.workspace = true
tokio = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
arrow-array.workspace = true
arrow-schema.workspace = true
serde_json = { workspace = true }
nanoid = "0.5.0"
async-trait.workspace = true
oxbow = { workspace = true }
noodles = { workspace = true, features = ["vcf"] }
derive_more = { workspace = true }

[dev-dependencies]
datalake = { path = "../datalake" }
iceberg.workspace = true
