[package]
name = "data-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Multi-format file ingestion: convert structured files (VCF, CSV, ...) to Arrow RecordBatches for the datalake."

[dependencies]
data-engine = { path = "../data-engine" }
file-base = { path = "../file-base" }
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
async-trait.workspace = true
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
vcf-arrow = "0.1.6"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
