[package]
name = "datalake-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentik-core = { path = "../agentik-core" }
async-trait = { workspace = true }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
datalake = { path = "../datalake" }
iceberg = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
