[package]
name = "datalake-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent tools for querying the Iceberg data lake."

[dependencies]
schemars.workspace = true
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
datalake = { path = "../datalake" }
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
datafusion.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true

[lints]
workspace = true
