[package]
name = "datalake"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
iceberg-storage-opendal.workspace = true
iceberg-datafusion = "0.9.0"
datafusion = "52.5"
tokio = { workspace = true }
arrow = "57.3.0"
arrow-array = "57.3.0"
