[package]
name = "datalake"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Iceberg connection management: REST catalog bootstrap, DataFusion catalog provider, and namespace/table CRUD."

[dependencies]
anyhow.workspace = true
tokio = { workspace = true }
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
iceberg-storage-opendal.workspace = true
iceberg-datafusion.workspace = true
datafusion.workspace = true

[lints]
workspace = true