[package]
name = "eutils-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Async Rust SDK for NCBI Entrez Programming Utilities (E-utilities) with agent tools for PubMed and other Entrez databases."

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3"

[lints]
workspace = true
