[package]
name = "fs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
async-trait = { workspace = true }
futures = { workspace = true }
opendal = "0.57"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = "1.23"

[lints]
workspace = true
